--- a/public/frontend/less/pages/contact.less
+++ b/public/frontend/less/pages/contact.less
@@ -2,6 +2,24 @@
 @import "../common/common";
 
 #contact_main{
-
-
+  >h1{
+    font-size:40px;
+    text-align:center;
+    margin:0 0 10px 0;
+  }
+  >p{
+    text-align:center;
+    margin:0 0 10px 0;
+  }
+  .contantUs{
+    width:80%;
+    height:400px;
+    margin:10px auto;
+    background:#f2f2f2;
+    .emailUs,.callUs{
+      display:inline-block;
+      width:49%;
+      text-align:center;
+    }
+  }
 }
