--- a/public/frontend/less/pages/user.less
+++ b/public/frontend/less/pages/user.less
@@ -3,7 +3,7 @@
 
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
 .clearfix{zoom:1;}
-.content{
+#user_main{
   min-width: 1000px;
   width: 1366px;
   background-color: #ffffff;
