--- a/public/frontend/css/pages/user.css
+++ b/public/frontend/css/pages/user.css
@@ -231,50 +231,50 @@ table {
 .clearfix {
   zoom: 1;
 }
-.content {
+#user_main {
   min-width: 1000px;
   width: 1366px;
   background-color: #ffffff;
   margin: 0 auto;
 }
-.content a {
+#user_main a {
   text-decoration: none;
   color: #5a5a5a;
 }
-.content li {
+#user_main li {
   text-align: left;
   list-style: none;
 }
-.content .user-overview {
+#user_main .user-overview {
   width: 81%;
   margin: 0 auto;
   background-color: #f8f8f8;
   display: block;
 }
-.content .user-overview .overview-item1 {
+#user_main .user-overview .overview-item1 {
   position: relative;
   display: inline-block;
   float: left;
   margin: 13px 30px 13px 77px;
 }
-.content .user-overview .overview-item1 .photo {
+#user_main .user-overview .overview-item1 .photo {
   width: 100px;
   height: 100px;
   border-radius: 100px;
   border: 0px solid transparent;
 }
-.content .user-overview .overview-item1 .uploadimg-btn {
+#user_main .user-overview .overview-item1 .uploadimg-btn {
   position: absolute;
   top: 33px;
   left: 31px;
   width: 37px;
   height: 32px;
 }
-.content .user-overview .overview-item1 .uploadimg {
+#user_main .user-overview .overview-item1 .uploadimg {
   width: 37px;
   height: 32px;
 }
-.content .user-overview .overview-item2 {
+#user_main .user-overview .overview-item2 {
   display: inline-block;
   box-sizing: border-box;
   height: 126px;
@@ -283,66 +283,66 @@ table {
   padding-left: 0;
   margin: 0;
 }
-.content .user-overview .overview-item2 .overview-email {
+#user_main .user-overview .overview-item2 .overview-email {
   font-family: MicrosoftYaHei;
   font-size: 16px;
   color: #5a5a5a;
 }
-.content .user-overview .overview-item2 .photo-btn,
-.content .user-overview .overview-item2 .password-btn {
+#user_main .user-overview .overview-item2 .photo-btn,
+#user_main .user-overview .overview-item2 .password-btn {
   font-size: 14px;
   color: #5a5a5a;
 }
-.content .user-form {
+#user_main .user-form {
   width: 76%;
   margin: 0 auto;
 }
-.content .user-form .row {
+#user_main .user-form .row {
   margin-top: 20px;
 }
-.content .user-form .row .user-name {
+#user_main .user-form .row .user-name {
   width: 100%;
 }
-.content .user-form .row .inp-normal {
+#user_main .user-form .row .inp-normal {
   float: left;
   width: 27%;
   display: table-cell;
 }
-.content .user-form .row .fill1 {
+#user_main .user-form .row .fill1 {
   float: left;
   display: table-cell;
   width: 4%;
   height: 40px;
 }
-.content .user-form .row .inp-big {
+#user_main .user-form .row .inp-big {
   float: left;
   width: 38%;
   display: table-cell;
 }
-.content .user-form .row .inp-small-left {
+#user_main .user-form .row .inp-small-left {
   float: left;
   display: table-cell;
   width: 16%;
 }
-.content .user-form .row .inp-small-right {
+#user_main .user-form .row .inp-small-right {
   float: left;
   display: table-cell;
   width: 16%;
 }
-.content .user-form .row .fill2 {
+#user_main .user-form .row .fill2 {
   float: left;
   display: table-cell;
   width: 6%;
   height: 40px;
 }
-.content .user-form .long-row {
+#user_main .user-form .long-row {
   height: 56px;
   border-radius: 4px;
   background-color: #f8f8f8;
   border: solid 1px #cccccc;
   padding-left: 20px;
 }
-.content .user-form .long-row .form-email-tip {
+#user_main .user-form .long-row .form-email-tip {
   height: 13px;
   margin-top: 11px;
   font-family: MicrosoftYaHei;
@@ -351,7 +351,7 @@ table {
   text-align: left;
   color: #999999;
 }
-.content .user-form .long-row .form-email {
+#user_main .user-form .long-row .form-email {
   margin-bottom: 8px;
   height: 15px;
   font-family: MicrosoftYaHei;
@@ -360,11 +360,11 @@ table {
   text-align: left;
   color: #666666;
 }
-.content .user-form .form-footer {
+#user_main .user-form .form-footer {
   height: 40px;
   text-align: right;
 }
-.content .user-form .form-footer .submit {
+#user_main .user-form .form-footer .submit {
   display: inline-block;
   width: 100px;
   height: 40px;
@@ -376,7 +376,7 @@ table {
   text-align: center;
   color: #ffffff;
 }
-.content .user-form input {
+#user_main .user-form input {
   box-sizing: border-box;
   border: solid 1px #cccccc;
   border-radius: 4px;
