--- a/public/frontend/css/common/common.css
+++ b/public/frontend/css/common/common.css
@@ -34,55 +34,69 @@
 #topBar .topBar_right {
   position: absolute;
   top: 15px;
-  right: 130px;
+  right: 80px;
 }
 #topBar .topBar_right .search {
   display: inline-block;
   position: relative;
 }
 #topBar .topBar_right .search input {
+  box-sizing: border-box;
   width: 180px;
   height: 26px;
+  text-indent: 15px;
+  padding: 0 30px 0 0;
   border-radius: 14px;
   border: solid 1px #5a5a5a;
+  outline: none;
+}
+#topBar .topBar_right .search .search_icon {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: url('/images/search_icon.png') no-repeat;
+  position: absolute;
+  top: 5px;
+  right: 8px;
 }
 #topBar .topBar_right .user_icon {
   display: inline-block;
+  cursor: pointer;
   width: 16px;
   height: 16px;
   margin: 0 0 0 20px;
-  background: url('/images/logo.png') no-repeat;
+  background: url('/images/user_icon.png') no-repeat;
   background-size: 16px 16px;
   position: relative;
   top: 3px;
 }
-.footer {
+#footer {
   box-sizing: border-box;
   min-width: 1366px;
   height: 480px;
   padding: 85px 0 0 130px;
   background-color: #585858;
 }
-.footer .subscribe,
-.footer .about,
-.footer .support,
-.footer .contact {
+#footer .subscribe,
+#footer .about,
+#footer .support,
+#footer .contact {
   display: inline-block;
   color: #fff;
   font-size: 12px;
   vertical-align: top;
 }
-.footer .subscribe > h4,
-.footer .about > h4,
-.footer .support > h4,
-.footer .contact > h4 {
+#footer .subscribe > h4,
+#footer .about > h4,
+#footer .support > h4,
+#footer .contact > h4 {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
-.footer .subscribe {
+#footer .subscribe {
   width: 33%;
 }
-.footer .subscribe .email_submit > input {
+#footer .subscribe .email_submit > input {
   width: 277px;
   height: 40px;
   text-indent: 10px;
@@ -90,7 +104,7 @@
   border-radius: 2px;
   margin: 10px 0;
 }
-.footer .subscribe .email_submit > button {
+#footer .subscribe .email_submit > button {
   width: 78px;
   height: 30px;
   color: #fff;
@@ -100,31 +114,61 @@
   border: solid 1px #989898;
   background-color: #585858;
 }
-.footer .about,
-.footer .support {
+#footer .subscribe .link {
+  margin: 40px 0 0 0;
+}
+#footer .subscribe .link i {
+  display: inline-block;
+  cursor: pointer;
+  width: 36px;
+  height: 36px;
+  background-repeat: no-repeat;
+  background-size: 36px 36px;
+  margin: 0 10px 0 0;
+}
+#footer .subscribe .link .facebook_icon {
+  background: url('/images/facebook_icon.png');
+}
+#footer .subscribe .link .twitter_icon {
+  background: url('/images/twitter_icon.png');
+}
+#footer .subscribe .link .google_icon {
+  background: url('/images/google_icon.png');
+}
+#footer .subscribe .link .youtobe_icon {
+  background: url('/images/youtobe_icon.png');
+}
+#footer .subscribe .link .instagram_icon {
+  background: url('/images/instagram_icon.png');
+}
+#footer .subscribe .link .periscope_icon {
+  background: url('/images/periscope_icon.png');
+}
+#footer .about,
+#footer .support {
   width: 22%;
 }
-.footer .about > ul li,
-.footer .support > ul li {
+#footer .about > ul li,
+#footer .support > ul li {
   margin: 0 0 20px 0;
 }
-.footer .about > ul li span,
-.footer .support > ul li span {
+#footer .about > ul li span,
+#footer .support > ul li span {
   cursor: pointer;
 }
-.footer .about > ul li span:hover,
-.footer .support > ul li span:hover {
+#footer .about > ul li span:hover,
+#footer .support > ul li span:hover {
   color: #00a7e1;
 }
-.footer .contact {
+#footer .contact {
   width: 22%;
 }
-.footer .contact .call,
-.footer .contact .email {
+#footer .contact .call,
+#footer .contact .email {
   margin: 0 0 40px 0;
 }
-.footer .contact .call > h4,
-.footer .contact .email > h4 {
+#footer .contact .call > h4,
+#footer .contact .email > h4 {
   font-size: 16px;
   margin: 0 0 20px 0;
 }
