--- a/public/frontend/less/pages/register.less
+++ b/public/frontend/less/pages/register.less
@@ -37,13 +37,26 @@
             height: 49px;
             border: 1px solid #5a5a5a;
             margin-bottom: 29px;
-            img {
-              vertical-align: middle;
-              width: 25px;
+            .user-icon {
+              width:25px;
               height: 25px;
+              vertical-align: middle;
               margin: 12px;
-              border: 1px solid red;
             }
+            .password-icon{
+              width:20px;
+              height: 24px;
+              vertical-align: middle;
+              margin: 14px;
+
+            }
+            .again-icon{
+              width:23px;
+              height: 24px;
+              vertical-align: middle;
+              margin: 12px;
+            }
+
             .vline {
               vertical-align: middle;
               display: inline-block;
@@ -62,6 +75,9 @@
               font-size: 18px;
               line-height: 47px;
               padding-left: 25px;
+            }
+            input:focus{
+              outline:none;
             }
           }
         }
