--- a/public/frontend/less/pages/support.less
+++ b/public/frontend/less/pages/support.less
@@ -80,17 +80,17 @@ input {
     li {
       display: inline-block;
       vertical-align: top;
-      //float: left;
+      float: left;
       color: #5a5a5a;
-      width: 49%;
+      width: 50%;
       height: 93px;
       .refunds-icon {
-        background: url("/frontend/image/download.png")  no-repeat;
-        background-size:40px 40px;
+        background: url("../../../images/refunds_exchanges.png") no-repeat;
+        background-size: 40px 40px;
       }
       .warranty-icon {
-        background: url("/frontend/image/supportBg.jpg") no-repeat;
-        background-size:40px 40px;
+        background: url("../../../images/warranty.png") no-repeat;
+        background-size: 40px 40px;
       }
       i {
         display: block;
@@ -111,10 +111,12 @@ input {
         }
         cursor: pointer;
         .refunds-icon {
-          background: url("../../image/download.png") 40px 40px no-repeat;
+          background: url("../../../images/refunds_exchanges_1.png") no-repeat;
+          background-size: 40px 40px;
         }
         .warranty-icon {
-          background: url("../../image/download.png") 40px 40px no-repeat;
+          background: url("../../../images/warranty_1.png") no-repeat;
+          background-size: 40px 40px;
         }
       }
     }
@@ -125,10 +127,12 @@ input {
         color: #fff;
       }
       .refunds-icon {
-        background: url("../../image/download.png") 40px 40px no-repeat;
+        background: url("../../../images/refunds_exchanges_1.png") no-repeat;
+        background-size: 40px 40px;
       }
       .warranty-icon {
-        background: url("../../image/download.png") 40px 40px no-repeat;
+        background: url("../../../images/warranty_1.png") no-repeat;
+        background-size: 40px 40px;
       }
     }
   }
@@ -165,9 +169,11 @@ input {
           height: 40px;
           border-radius: 4px;
           border: 1px solid #ccc;
+          padding-left: 13px;
         }
         .required {
           color: #ff0000;
+          font-size: 22px;
         }
         .container, .order, .issue, .images, .form-footer {
           div {
@@ -198,6 +204,7 @@ input {
               height: 37px;
               border: 1px solid #ccc;
               border-radius: 4px;
+              padding-left:11px;
             }
             .code {
               vertical-align: middle;
@@ -227,14 +234,17 @@ input {
       }
     }
     .warranty {
+      margin-top: 90px;
+      margin-bottom: 50px;
       h2 {
         text-align: center;
-        font-size: 2.4rem;
+        font-size: 18px;
         font-weight: 400;
         color: #3d3938;
       }
       .warranty-content, .faqs-content {
         margin-top: 30px;
+        margin-bottom: 30px;
         color: #5a5a5a;
       }
     }
